--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Luke Ugalino</title>
 </head>
 <body>
-    <h1>Luke Ugalino</h1>
+    <h1>I'm Luke Ugalino</h1>
+    <p>a programmer</p>
 </body>
 </html>
