--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel="icon" href="favicon.ico">
     <title>Luke Ugalino</title>
 </head>
+
 <body>
-    <h1>Luke Ugalino</h1>
+    <div class="">
+        <h1>I'm Luke Ugalino</h1>
+        <p>a programmer</p>
+    </div>
 </body>
+
 </html>
