--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 
 <body>
-    <div class="">
+    <div class="top-container">
         <h1>I'm Luke Ugalino</h1>
         <p>a programmer</p>
+    </div>
+    <div class="middle-container">
+
+    </div>
+    <div class="bottom-container">
+
     </div>
 </body>
 
