--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
 <body>
     <div class="top-container">
+        <img src="https://raw.githubusercontent.com/ProjectLuke/CSS-MySite/main/cloud.png" alt="cloud-img">
         <h1>I'm Luke Ugalino</h1>
         <p>a programmer</p>
+        <img src="https://raw.githubusercontent.com/ProjectLuke/CSS-MySite/main/cloud.png" alt="cloud-img">
+        <img src="https://raw.githubusercontent.com/ProjectLuke/CSS-MySite/main/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
 
