Add Google Font Style links

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <title>Luke Ugalino</title>
@@ -9,10 +12,10 @@
 
 <body>
     <div class="top-container">
-        <img src="https://raw.githubusercontent.com/ProjectLuke/CSS-MySite/main/cloud.png" alt="cloud-img">
-        <h1>I'm Luke Ugalino</h1>
-        <p>a programmer</p>
-        <img src="https://raw.githubusercontent.com/ProjectLuke/CSS-MySite/main/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="https://raw.githubusercontent.com/ProjectLuke/CSS-MySite/main/cloud.png" alt="cloud-img">
+        <h1>I'm Luke.</h1>
+        <p>a <span class="pro">pro</span>grammer.</p>
+        <img class="bottom-cloud" src="https://raw.githubusercontent.com/ProjectLuke/CSS-MySite/main/cloud.png" alt="cloud-img">
         <img src="https://raw.githubusercontent.com/ProjectLuke/CSS-MySite/main/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
