--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <div class="profile">
           <img class="luke-pfp" src="https://media-exp1.licdn.com/dms/image/C5603AQH66VUvF2eRiQ/profile-displayphoto-shrink_800_800/0/1616110424900?e=1641427200&v=beta&t=plpSat7oZfZ9MHWCV8WI-nieWTJIiIi3ALRufgTMyZ4" alt="Picture of Luke">
           <h2>Hello.</h2>
-          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          <p>I enjoy taking on challenges and tasks that will elevate me to the next level of my career and hobby improvement.</p>
         </div>
         <hr>
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
             <img class="" src="https://cdn-icons.flaticon.com/png/512/3211/premium/3211343.png?token=exp=1635800326~hmac=6c34bd8d317f6e90228a483a4de9b8fa" alt="Cloud Computing Related picture">
-            <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            <h3>Cloud Computing</h3>
+            <p>One department in my professional development I enjoy working on is cloud computing. I believe it is the technology of the future as it is making a big impact today. </p>
           </div>
           <div class="skill-row">
             <img class="" src="https://cdn-icons.flaticon.com/png/512/3339/premium/3339405.png?token=exp=1635800460~hmac=e26e2d1632298b05dc3e6e7d3012d34f" alt="Picture of R6S">
