Add classes for Float and positioning

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <title>Luke Ugalino</title>
@@ -14,7 +14,7 @@
     <div class="top-container">
         <img class="top-cloud" src="https://raw.githubusercontent.com/ProjectLuke/CSS-MySite/main/cloud.png" alt="cloud-img">
         <h1>I'm Luke.</h1>
-        <p>a <span class="pro">pro</span>grammer.</p>
+        <h2 class="pro2">a <span class="pro">pro</span>grammer.</h2>
         <img class="bottom-cloud" src="https://raw.githubusercontent.com/ProjectLuke/CSS-MySite/main/cloud.png" alt="cloud-img">
         <img src="https://raw.githubusercontent.com/ProjectLuke/CSS-MySite/main/mountain.png" alt="mountain-img">
     </div>
@@ -28,13 +28,13 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="" src="https://cdn-icons.flaticon.com/png/512/3211/premium/3211343.png?token=exp=1635800326~hmac=6c34bd8d317f6e90228a483a4de9b8fa" alt="Cloud Computing Related picture">
-            <h3>Cloud Computing</h3>
-            <p>One department in my professional development I enjoy working on is cloud computing. I believe it is the technology of the future as it is making a big impact today. </p>
+            <img class="cloud-computing-pic" src="https://cdn-icons.flaticon.com/png/512/3211/premium/3211343.png?token=exp=1635800326~hmac=6c34bd8d317f6e90228a483a4de9b8fa" alt="Cloud Computing Related picture">
+            <h3 class="">Cloud Computing</h3>
+            <p class="">One department in my professional development I enjoy working on is cloud computing. I believe it is the technology of the future as it is making a big impact today. </p>
           </div>
           <div class="skill-row">
-            <img class="" src="https://cdn-icons.flaticon.com/png/512/3339/premium/3339405.png?token=exp=1635800460~hmac=e26e2d1632298b05dc3e6e7d3012d34f" alt="Picture of R6S">
-            <h3>Lorem Ipsum Dolor</h3>
+            <img class="gaming-pic" src="https://cdn-icons.flaticon.com/png/512/3339/premium/3339405.png?token=exp=1635800460~hmac=e26e2d1632298b05dc3e6e7d3012d34f" alt="Picture of R6S">
+            <h3>PC Gaming</h3>
             <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
         </div>
