Add classes to cloud and gaming text

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
           <div class="skill-row">
             <img class="cloud-computing-pic" src="https://cdn-icons.flaticon.com/png/512/3211/premium/3211343.png?token=exp=1635800326~hmac=6c34bd8d317f6e90228a483a4de9b8fa" alt="Cloud Computing Related picture">
             <h3 class="">Cloud Computing</h3>
-            <p class="">One department in my professional development I enjoy working on is cloud computing. I believe it is the technology of the future as it is making a big impact today. </p>
+            <p class="cloud-text">One department in my professional development I enjoy working on is cloud computing. I believe it is the technology of the future as it is making a big impact today. </p>
           </div>
           <div class="skill-row">
             <img class="gaming-pic" src="https://cdn-icons.flaticon.com/png/512/3339/premium/3339405.png?token=exp=1635800460~hmac=e26e2d1632298b05dc3e6e7d3012d34f" alt="Picture of R6S">
             <h3>PC Gaming</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            <p class="gaming-text">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
         </div>
         <hr>
