--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="profile">
           <img class="luke-pfp" src="https://media-exp1.licdn.com/dms/image/C5603AQH66VUvF2eRiQ/profile-displayphoto-shrink_800_800/0/1616110424900?e=1641427200&v=beta&t=plpSat7oZfZ9MHWCV8WI-nieWTJIiIi3ALRufgTMyZ4" alt="Picture of Luke">
           <h2>Hello.</h2>
-          <p>I enjoy taking on challenges and tasks that will elevate me to the next level of my career and hobby improvement.</p>
+          <p class="pfp-text">I enjoy taking on challenges and tasks that will elevate me to the next level of my career and hobby improvement. I also like being a devils advocate 😈 and playing games.</p>
         </div>
         <hr>
         <div class="skills">
