photo link adjustment

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="cloud-computing-pic" src="https://cdn-icons.flaticon.com/png/512/3211/premium/3211343.png?token=exp=1635800326~hmac=6c34bd8d317f6e90228a483a4de9b8fa" alt="Cloud Computing Related picture">
+            <img class="cloud-computing-pic" src="https://cdn-icons.flaticon.com/png/512/3211/premium/3211343.png?token=exp=1636251518~hmac=7dd8292e0be425f3cbd85f09b3bff4dd" alt="Cloud Computing Related picture">
             <h3 class="">Cloud Computing</h3>
             <p class="cloud-text">One department in my professional development I enjoy working on is cloud computing. I believe it is the technology of the future as it is making a big impact today. </p>
           </div>
           <div class="skill-row">
-            <img class="gaming-pic" src="https://cdn-icons.flaticon.com/png/512/3339/premium/3339405.png?token=exp=1635800460~hmac=e26e2d1632298b05dc3e6e7d3012d34f" alt="Picture of R6S">
+            <img class="gaming-pic" src="https://cdn-icons.flaticon.com/png/512/4176/premium/4176322.png?token=exp=1636251568~hmac=5d93d8cfbb219be9a20bec34912a7233" alt="Picture of R6S">
             <h3>PC Gaming</h3>
             <p class="gaming-text">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
@@ -41,8 +41,8 @@
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <h3>Do you enjoy RC Racin as well?</h3>
+          <p class="contact-text">Contact me so we can talk about all kinds of racing. From rally cars to trophy trucks, even motorcross! There will be free food such as pizza, sushi, tacos, and BBQ!</p>
           <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
       </div>
